mejoro los test de persistencia