@@ -6,12 +6,9 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.NoSuchElementException;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -23,7 +20,6 @@ import modelo.Objeto;
 import modelo.ObjetoBasico;
 import modelo.ObjetoIntermedio;
 import modelo.Receta;
-import modelo.Recetario;
 import modelo.MesaDeHierro;
 
 class RecetaGSONTest {
@@ -37,7 +33,6 @@ class RecetaGSONTest {
     private static final String RECETAS_SALIDA_JSON = TEST_DIR + "recetas_salida.json";
 
     private ObjetoBasico madera;
-    private ObjetoBasico piedra;
     private ObjetoBasico carbon;
     private ObjetoIntermedio palo;
     private ObjetoIntermedio antorcha;
@@ -49,20 +44,16 @@ class RecetaGSONTest {
 
     @BeforeEach
     void setUp() throws IOException {
-        Path testDirPath = Path.of(TEST_DIR);
-        if (!Files.exists(testDirPath)) {
-            Files.createDirectories(testDirPath);
-        }
+    	Files.createDirectories(Path.of(TEST_DIR));
 
-        // Initialize objects
+        // Objetos
         madera = new ObjetoBasico("Madera");
-        piedra = new ObjetoBasico("Piedra");
         carbon = new ObjetoBasico("Carbon");
         palo = new ObjetoIntermedio("Palo");
         antorcha = new ObjetoIntermedio("Antorcha");
         
 
-        // Initialize recipes
+        // recetas
         Map<Objeto, Integer> ingredientesPalo = new HashMap<>();
         ingredientesPalo.put(madera, 2);
         recetaPalo = new Receta(palo, ingredientesPalo, 4, 10); // 2 Madera -> 4 Palos, 10s
@@ -78,38 +69,17 @@ class RecetaGSONTest {
         ingredientesMesa.put(madera, 4);
         recetaMesaDeTrabajo = new Receta(mesaHierro, ingredientesMesa, 1, 20); // 4 Madera -> 1 Mesa, 20s
 
-        // Create test JSON files
+        //json estaticos
         try (FileWriter writer = new FileWriter(RECETAS_VACIO_JSON)) {
             writer.write("[]");
         }
-
-        List<RecetaSerializable> simples = new ArrayList<>();
-        simples.add(RecetaSerializable.fromReceta(recetaPalo));
-        try (FileWriter writer = new FileWriter(RECETAS_SIMPLES_JSON)) {
-            new ManejadorGSON<List<RecetaSerializable>>(RECETAS_SIMPLES_JSON) {
-                public void guardar(List<RecetaSerializable> datosAGuardar) {
-                    super.gson.toJson(datosAGuardar, writer);
-                }
-            }.guardar(simples);
-        }
-
-        List<RecetaSerializable> complejas = new ArrayList<>();
-        complejas.add(RecetaSerializable.fromReceta(recetaAntorcha));
-        try (FileWriter writer = new FileWriter(RECETAS_COMPLEJAS_JSON)) {
-            new ManejadorGSON<List<RecetaSerializable>>(RECETAS_COMPLEJAS_JSON) {
-                public void guardar(List<RecetaSerializable> datosAGuardar) {
-                    super.gson.toJson(datosAGuardar, writer);
-                }
-            }.guardar(complejas);
-        }
-
-        // JSON for recipe producing a basic object (should cause IllegalStateException on load)
+        
         try (FileWriter writer = new FileWriter(RECETA_PRODUCE_BASICO_JSON)) {
             writer.write("[\n" +
                     "  {\n" +
                     "    \"objetoProducido\": {\n" +
                     "      \"nombre\": \"Madera\",\n" +
-                    "      \"tipo\": \"basico\"\n" + // Incorrect: Receta must produce ObjetoIntermedio
+                    "      \"tipo\": \"basico\"\n" + 
                     "    },\n" +
                     "    \"ingredientes\": [],\n" +
                     "    \"cantidadProducida\": 1,\n" +
@@ -118,7 +88,6 @@ class RecetaGSONTest {
                     "]");
         }
 
-        // JSON for recipe with an unknown ingredient type
         try (FileWriter writer = new FileWriter(RECETA_INGREDIENTE_DESCONOCIDO_JSON)) {
             writer.write("[\n" +
                     "  {\n" +
@@ -130,7 +99,58 @@ class RecetaGSONTest {
                     "      {\n" +
                     "        \"objeto\": {\n" +
                     "          \"nombre\": \"ObjetoDesconocido\",\n" +
-                    "          \"tipo\": \"desconocido\"\n" + // Unknown type
+                    "          \"tipo\": \"desconocido\"\n" + // Desconocido
+                    "        },\n" +
+                    "        \"cantidad\": 1\n" +
+                    "      }\n" +
+                    "    ],\n" +
+                    "    \"cantidadProducida\": 4,\n" +
+                    "    \"tiempoBase\": 5\n" +
+                    "  }\n" +
+                    "]");
+        }
+        
+        try (FileWriter writer = new FileWriter(RECETAS_SIMPLES_JSON)) {
+        	writer.write("[\n" +
+                    "  {\n" +
+                    "    \"objetoProducido\": {\n" +
+                    "      \"nombre\": \"palo\",\n" +
+                    "      \"tipo\": \"intermedio\"\n" +
+                    "    },\n" +
+                    "    \"ingredientes\": [\n" +
+                    "      {\n" +
+                    "        \"objeto\": {\n" +
+                    "          \"nombre\": \"madera\",\n" +
+                    "          \"tipo\": \"basico\"\n" + 
+                    "        },\n" +
+                    "        \"cantidad\": 2\n" +
+                    "      }\n" +
+                    "    ],\n" +
+                    "    \"cantidadProducida\": 4,\n" +
+                    "    \"tiempoBase\": 10\n" +
+                    "  }\n" +
+                    "]");
+        }
+        
+        try (FileWriter writer = new FileWriter(RECETAS_COMPLEJAS_JSON)) {
+        	writer.write("[\n" +
+                    "  {\n" +
+                    "    \"objetoProducido\": {\n" +
+                    "      \"nombre\": \"antorcha\",\n" +
+                    "      \"tipo\": \"intermedio\"\n" +
+                    "    },\n" +
+                    "    \"ingredientes\": [\n" +
+                    "      {\n" +
+                    "        \"objeto\": {\n" +
+                    "          \"nombre\": \"palo\",\n" +
+                    "          \"tipo\": \"intermedio\"\n" + 
+                    "        },\n" +
+                    "        \"cantidad\": 1\n" +
+                    "      },\n" +
+                    "      {\n" +
+                    "        \"objeto\": {\n" +
+                    "          \"nombre\": \"carbon\",\n" +
+                    "          \"tipo\": \"basico\"\n" + 
                     "        },\n" +
                     "        \"cantidad\": 1\n" +
                     "      }\n" +
@@ -144,140 +164,67 @@ class RecetaGSONTest {
 
     @AfterEach
     void tearDown() throws IOException {
-        Files.walk(Path.of(TEST_DIR))
-             .sorted(java.util.Comparator.reverseOrder())
-             .map(Path::toFile)
-             .forEach(java.io.File::delete);
-    }
-
-    // Helper to compare recipes (deep equality)
-    private boolean areRecipesEqual(Receta r1, Receta r2) {
-        if (!r1.getObjetoProducido().equals(r2.getObjetoProducido())) return false;
-        if (r1.getCantidadProducida() != r2.getCantidadProducida()) return false;
-        if (r1.getTiempoBase() != r2.getTiempoBase()) return false;
-        if (r1.getIngredientes().size() != r2.getIngredientes().size()) return false;
-
-        for (Map.Entry<Objeto, Integer> entry : r1.getIngredientes().entrySet()) {
-            Objeto ing1 = entry.getKey();
-            int qty1 = entry.getValue();
-            if (!r2.getIngredientes().containsKey(ing1) || r2.getIngredientes().get(ing1) != qty1) {
-                return false;
-            }
-        }
-        return true;
+    	Files.deleteIfExists(Path.of(RECETAS_VACIO_JSON));
+        Files.deleteIfExists(Path.of(RECETA_PRODUCE_BASICO_JSON));
+        Files.deleteIfExists(Path.of(RECETA_INGREDIENTE_DESCONOCIDO_JSON));
+        Files.deleteIfExists(Path.of(RECETAS_SIMPLES_JSON));
+        Files.deleteIfExists(Path.of(RECETAS_COMPLEJAS_JSON));
+        Files.deleteIfExists(Path.of(RECETAS_SALIDA_JSON));
+        Files.deleteIfExists(Path.of(TEST_DIR));
     }
 
     @Test
     void cargarRecetasVacias() {
-        RecetaGSON recetaGSON = new RecetaGSON(RECETAS_VACIO_JSON);
-        List<Receta> loadedRecetas = recetaGSON.cargar();
-        assertNotNull(loadedRecetas);
-        assertTrue(loadedRecetas.isEmpty());
+        List<Receta> recetasLeidas = new RecetaGSON(RECETAS_VACIO_JSON).cargar();
+        assertNotNull(recetasLeidas);
+        assertTrue(recetasLeidas.isEmpty());
     }
 
     @Test
     void cargarRecetasSimples() {
-        RecetaGSON recetaGSON = new RecetaGSON(RECETAS_SIMPLES_JSON);
-        List<Receta> loadedRecetas = recetaGSON.cargar();
-        assertEquals(1, loadedRecetas.size());
-
-        // Verify loaded recipes
-        assertTrue(loadedRecetas.stream().anyMatch(r -> areRecipesEqual(r, recetaPalo)));
+        List<Receta> recetasLeidas = new RecetaGSON(RECETAS_SIMPLES_JSON).cargar();
+        assertEquals(1, recetasLeidas.size());
+        assertTrue(recetasLeidas.get(0).equals(recetaPalo));
     }
 
     @Test
     void cargarRecetasComplejas() {
         RecetaGSON recetaGSON = new RecetaGSON(RECETAS_COMPLEJAS_JSON);
-        List<Receta> loadedRecetas = recetaGSON.cargar();
-        assertEquals(1, loadedRecetas.size());
-
-        assertTrue(loadedRecetas.stream().anyMatch(r -> areRecipesEqual(r, recetaAntorcha)));
-
-        // Verify the type of the produced object and ingredients
-        loadedRecetas.forEach(rec -> {
-            assertFalse(rec.getObjetoProducido().esBasico(), "Produced object should not be basic");
-            rec.getIngredientes().forEach((ing, qty) -> {
-                // For 'Antorcha', 'Palo' is intermediate, 'Carbon' is basic
-                if (rec.getObjetoProducido().equals(antorcha)) {
-                    if (ing.equals(palo)) {
-                        assertFalse(ing.esBasico());
-                    } else if (ing.equals(carbon)) {
-                        assertTrue(ing.esBasico());
-                    }
-                }
-            });
-        });
+        List<Receta> recetasLeidas = recetaGSON.cargar();
+        assertEquals(1, recetasLeidas.size());
+        assertTrue(recetasLeidas.get(0).equals(recetaAntorcha));
     }
 
     @Test
     void guardarYcargarRecetasMixtas() {
-        List<Receta> originalRecetas = Arrays.asList(recetaPalo, recetaAntorcha, recetaMesaDeTrabajo);
-        RecetaGSON recetaGSON = new RecetaGSON(RECETAS_SALIDA_JSON);
-        recetaGSON.guardar(originalRecetas);
+        List<Receta> recetasGuardadas = List.of(recetaPalo, recetaAntorcha, recetaMesaDeTrabajo);
+        new RecetaGSON(RECETAS_SALIDA_JSON).guardar(recetasGuardadas);
 
-        List<Receta> loadedRecetas = new RecetaGSON(RECETAS_SALIDA_JSON).cargar();
-        assertEquals(originalRecetas.size(), loadedRecetas.size());
+        List<Receta> recetasLeidas = new RecetaGSON(RECETAS_SALIDA_JSON).cargar();
+        assertEquals(recetasGuardadas.size(), recetasLeidas.size());
 
-        // Use streams to compare lists without worrying about order
-        assertTrue(originalRecetas.stream().allMatch(orig ->
-            loadedRecetas.stream().anyMatch(loaded -> areRecipesEqual(orig, loaded))
-        ));
-        assertTrue(loadedRecetas.stream().allMatch(loaded ->
-            originalRecetas.stream().anyMatch(orig -> areRecipesEqual(loaded, orig))
-        ));
+        assertTrue(recetasGuardadas.equals(recetasLeidas));
+        assertTrue(recetasLeidas.equals(recetasGuardadas));
     }
 
     @Test
-    void cargarRecetaProduceBasicoThrowsIllegalStateException() {
-        // This test ensures that RecetaSerializable.toReceta() throws the expected exception
-        // if a recipe tries to produce a basic object.
-        RecetaGSON recetaGSON = new RecetaGSON(RECETA_PRODUCE_BASICO_JSON);
-        
-        // When loaded, the internal data will be set.
-        // We'll call toReceta() explicitly on the first deserialized item
-        // to trigger the validation.
+    void cargarRecetaQueProduceUnObjetoBasico() {
         assertThrows(IllegalStateException.class, () -> {
-            List<Receta> loaded = recetaGSON.cargar(); // This will try to call toReceta() internally
+        	new RecetaGSON(RECETA_PRODUCE_BASICO_JSON).cargar();
         });
     }
 
     @Test
-    void cargarRecetaConIngredienteDesconocidoThrowsJsonParseException() {
-        // This test ensures that GSON throws JsonParseException if an unknown type is encountered
-        RecetaGSON recetaGSON = new RecetaGSON(RECETA_INGREDIENTE_DESCONOCIDO_JSON);
+    void cargarRecetaConIngredienteDesconocido() {
         assertThrows(JsonParseException.class, () -> {
-            recetaGSON.cargar();
+        	new RecetaGSON(RECETA_INGREDIENTE_DESCONOCIDO_JSON).cargar();
         });
     }
     
     @Test
-    void cargarRecetaConIngredienteDesconocidoEsVacio() throws IOException {
-        // This test ensures that if a JsonParseException occurs during loading,
-        // the method returns an empty list, demonstrating graceful failure.
-        // For this test, we temporarily remove the super.cargarJSON() call
-        // and manually trigger the exception.
-        
-        // This is a bit tricky to simulate without changing the production code
-        // and directly testing the "empty on failure" logic for RecetaGSON.cargar().
-        // The current implementation of ManejadorGSON.cargarJSON() prints an error
-        // and returns null for IOExceptions. JsonParseException is thrown by GSON itself.
-        
-        // Let's modify RecetaGSON.cargar() temporarily for this test,
-        // or accept that the current handling relies on ManejadorGSON's `datos = null` behavior.
-        
-        // Re-writing the test to reflect the `null` return from `super.cargarJSON()`:
-        // We'll simulate a scenario where `super.cargarJSON()` fails and returns null data.
-        
-        // Simulate a bad file that causes super.cargarJSON to return null or throw an error
-        // For example, by trying to load a non-existent file path directly for this test
-        Path nonExistentPath = Path.of(TEST_DIR + "non_existent_recetas.json");
-        Files.deleteIfExists(nonExistentPath); // Ensure it doesn't exist
-        
-        RecetaGSON recetaGSON = new RecetaGSON(nonExistentPath.toString());
-        List<Receta> loadedRecetas = recetaGSON.cargar(); // This should now handle the null from super.cargarJSON()
-        
-        assertNotNull(loadedRecetas);
-        assertTrue(loadedRecetas.isEmpty());
-        // The console output "Archivo no encontrado..." from ManejadorGSON would be seen.
+    void cargarRecetaConArchivoInvalidoEsVacio(){
+        List<Receta> recetasLeidas = new RecetaGSON("null").cargar();
+        assertNotNull(recetasLeidas);
+        assertTrue(recetasLeidas.isEmpty());
     }
 }
